update style and links new tab on click

--- a/js/style.css
+++ b/js/style.css
@@ -15,7 +15,13 @@ div {
   background-color: #78C37B;
   color: white;
 }
-
+.channelLink {
+  color: black;
+  text-decoration: none;
+}
+.channelLink:hover {
+  text-decoration: underline;
+}
 body {
   background-color: #006400;
   color: #333;
