setup files and style

--- a/js/style.css
+++ b/js/style.css
@@ -8,28 +8,61 @@ div {
   position:relative;
   z-index: 2;
 }
-.active {
-  font-weight: bold;
-}
-.online {
-  background-color: #78C37B;
-  color: white;
-}
-.channelLink {
-  color: black;
-  text-decoration: none;
-}
-.channelLink:hover {
-  text-decoration: underline;
-}
+
+
 body {
   background-color: #006400;
   color: #333;
   font-family: 'Raleway', sans-serif;
   font-weight:400;
 }
-.channel {
-  background-color: white !important;
+.color-container {
+  width: 300px;
+  height: 320px;
+  position: relative;
+  text-align: center;
+  margin: auto;
+ 
+}
+.inline {
+  display: inline-block;
+ 
+}
+#red {
+  height: 150px;
+  width: 150px;
+  background-color: red;
+  border-radius: 0 100% 0 0;
+  border: solid #333333;
+  border-width: 2px 2px 1px 1px;
+}
+#yellow {
+  height: 150px;
+  width: 150px;
+  background-color: yellow;
+  border-radius: 0 0 0 100%;
+  margin-top: -5px;
+  border: solid #333333;
+  border-width: 1px 1px 2px 2px;
+}
+
+
+#green {
+  height: 150px;
+  width: 150px;
+  background-color: green; 
+  border-radius: 100% 0 0 0;
+  border: solid #333333;
+  border-width: 2px 1px 1px 2px;
+}
+#blue {
+  height: 150px;
+  width: 150px;
+  background-color: blue;
+  border-radius: 0 0 100% 0;
+  margin-top: -5px;
+  border: solid #333333;
+  border-width: 1px 2px 2px 1px;
 }
 .title {
   width:450px;
